[package]
name = "wfe-executor"
version = "0.1.0"
authors = ["Wim Looman <wim.looman@kiwi.ki>"]

[dependencies]
cortex-m = "0.4.0"

[dependencies.futures-core]
version = "0.2.0-alpha"
default-features = false

[dependencies.futures-stable]
version = "0.2.0-alpha"
default-features = false

[dependencies.pin-api]
version = "0.1.1"
default-features = false


[patch.crates-io.futures]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"
[patch.crates-io.futures-core]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"
[patch.crates-io.futures-executor]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"
[patch.crates-io.futures-io]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"
[patch.crates-io.futures-util]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"
