[package]
name = "wfe-executor"
version = "0.1.0"
authors = ["Wim Looman <wim.looman@kiwi.ki>"]

[dependencies]
cortex-m = "0.4.0"

[dependencies.futures-core]
git = "https://github.com/rust-lang-nursery/futures-rs"
default-features = false
features = ["nightly"]

[dependencies.futures-stable]
git = "https://github.com/rust-lang-nursery/futures-rs"
default-features = false
features = ["nightly"]

[dependencies.pin-api]
version = "0.2.1"
default-features = false
features = ["nightly"]
